<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="btn_copy_db_file_txt">Copy DB File</string>
    <string name="app_name">Assignment 9</string>
    <string name="userWelc">Assignment 9</string>
    <string name="action_settings">Settings</string>
    <string name="btn_add_txt">Add</string>
    <string name="btn_update_txt">Update</string>
    <string name="btn_delete_txt">Delete</string>
    <string name="btn_get_single_txt">Get Users</string>
    <string name="btn_get_all_txt">Get All Users</string>

    <string name="tv_phone">Phone</string>
    <string name="tv_name">Name</string>
    <string name="tv_id">ID</string>
    <string name="empty_fields_txt">Some fields are empty!</string>
    <string name="no_id_txt">No ID given!</string>

    <string name="customer_id_txt">Customer with ID: </string>

    <string name="not_found_txt"> not found!</string>
    <string name="update_txt">Updating</string>
    <string name="success_txt"> was successful!</string>
    <string name="failure_txt"> failed!</string>

    <string name="delete_txt">Deleting</string>
    <string name="returned_value_txt">Returned value: </string>

    <string name="id_txt">ID: </string>
    <string name="name_txt">Name: </string>
    <string name="phone_txt">Phone: </string>

</resources>